--- a/custom_scss/custom.scss
+++ b/custom_scss/custom.scss
@@ -30,5 +30,49 @@ $utilities: map-merge(
   )
 );
 
+// custom viewport-height
+$utilities: map-merge(
+  $utilities,
+  (
+    "viewport-height": map-merge(
+      map-get($utilities, "viewport-height"),
+      (
+        values: map-merge(
+          map-get(map-get($utilities, "viewport-height"), "values"),
+          (
+            40: 40vh,
+            50: 50vh,
+            60: 60vh,
+            70: 70vh,
+            80: 80vh
+          ),
+        ),
+      ),
+    ),
+  )
+);
+$utilities: map-merge(
+  $utilities,
+  (
+    "min-viewport-height": map-merge(
+      map-get($utilities, "min-viewport-height"),
+      (
+        values: map-merge(
+          map-get(map-get($utilities, "min-viewport-height"), "values"),
+          (
+            40: 40vh,
+            50: 50vh,
+            60: 60vh,
+            70: 70vh,
+            80: 80vh
+          ),
+        ),
+      ),
+    ),
+  )
+);
+// hover for "Oferta"
+.oferta-hover:hover {transition: all 0.2s ease-in-out; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px} 
+
 @import "../node_modules/bootstrap/scss/utilities/api";
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
