media query for iPhone and iPad

--- a/assets/css/custom_bootstrap.css
+++ b/assets/css/custom_bootstrap.css
@@ -9,7 +9,7 @@
 }
 
 .overlay-gradient-hide {
-  animation: fadeOutDown 3s 0ms forwards;
+  animation: fadeOutDown 5s 0ms forwards;
 }
 
 @keyframes fadeOutDown {
@@ -277,6 +277,10 @@ html {
   --bs-focus-ring-color: rgba(var(--bs-darkgreen-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-darkgray {
+  --bs-focus-ring-color: rgba(var(--bs-darkgray-rgb), var(--bs-focus-ring-opacity));
+}
+
 .focus-ring-sand {
   --bs-focus-ring-color: rgba(var(--bs-sand-rgb), var(--bs-focus-ring-opacity));
 }
@@ -448,6 +452,11 @@ html {
 .border-darkgreen {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-darkgreen-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-darkgray {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-darkgray-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-sand {
@@ -624,26 +633,6 @@ html {
 
 .min-vh-100 {
   min-height: 100vh !important;
-}
-
-.min-vh-40 {
-  min-height: 40vh !important;
-}
-
-.min-vh-50 {
-  min-height: 50vh !important;
-}
-
-.min-vh-60 {
-  min-height: 60vh !important;
-}
-
-.min-vh-70 {
-  min-height: 70vh !important;
-}
-
-.min-vh-80 {
-  min-height: 80vh !important;
 }
 
 .flex-fill {
@@ -1376,6 +1365,10 @@ html {
   text-align: center !important;
 }
 
+.text-justify {
+  text-align: justify !important;
+}
+
 .text-decoration-none {
   text-decoration: none !important;
 }
@@ -1458,6 +1451,11 @@ html {
 .text-darkgreen {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-darkgreen-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-darkgray {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-darkgray-rgb), var(--bs-text-opacity)) !important;
 }
 
 .text-sand {
@@ -1677,6 +1675,11 @@ html {
   text-decoration-color: rgba(var(--bs-darkgreen-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-darkgray {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-darkgray-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline-sand {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-sand-rgb), var(--bs-link-underline-opacity)) !important;
@@ -1783,6 +1786,11 @@ html {
 .bg-darkgreen {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-darkgreen-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-darkgray {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-darkgray-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-sand {
@@ -2727,6 +2735,9 @@ html {
   .text-sm-center {
     text-align: center !important;
   }
+  .text-sm-justify {
+    text-align: justify !important;
+  }
 }
 @media (min-width: 768px) {
   .float-md-start {
@@ -3309,6 +3320,9 @@ html {
   }
   .text-md-center {
     text-align: center !important;
+  }
+  .text-md-justify {
+    text-align: justify !important;
   }
 }
 @media (min-width: 992px) {
@@ -3893,6 +3907,9 @@ html {
   .text-lg-center {
     text-align: center !important;
   }
+  .text-lg-justify {
+    text-align: justify !important;
+  }
 }
 @media (min-width: 1200px) {
   .float-xl-start {
@@ -4475,6 +4492,9 @@ html {
   }
   .text-xl-center {
     text-align: center !important;
+  }
+  .text-xl-justify {
+    text-align: justify !important;
   }
 }
 @media (min-width: 1400px) {
@@ -5059,6 +5079,9 @@ html {
   .text-xxl-center {
     text-align: center !important;
   }
+  .text-xxl-justify {
+    text-align: justify !important;
+  }
 }
 @media (min-width: 1200px) {
   .fs-1 {
@@ -5148,6 +5171,7 @@ html {
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-darkgreen: #1B5B31;
+  --bs-darkgray: #111111;
   --bs-sand: #DCC1AB;
   --bs-lightsand: #F5F0EC;
   --bs-primary-rgb: 13, 110, 253;
@@ -5159,6 +5183,7 @@ html {
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-darkgreen-rgb: 27, 91, 49;
+  --bs-darkgray-rgb: 17, 17, 17;
   --bs-sand-rgb: 220, 193, 171;
   --bs-lightsand-rgb: 245, 240, 236;
   --bs-primary-text-emphasis: #052c65;
@@ -8227,6 +8252,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #1B5B31;
 }
 
+.btn-darkgray {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #111111;
+  --bs-btn-border-color: #111111;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #0e0e0e;
+  --bs-btn-hover-border-color: #0e0e0e;
+  --bs-btn-focus-shadow-rgb: 53, 53, 53;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #0e0e0e;
+  --bs-btn-active-border-color: #0d0d0d;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #111111;
+  --bs-btn-disabled-border-color: #111111;
+}
+
 .btn-sand {
   --bs-btn-color: #000;
   --bs-btn-bg: #DCC1AB;
@@ -8411,6 +8453,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #1B5B31;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #1B5B31;
+  --bs-gradient: none;
+}
+
+.btn-outline-darkgray {
+  --bs-btn-color: #111111;
+  --bs-btn-border-color: #111111;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #111111;
+  --bs-btn-hover-border-color: #111111;
+  --bs-btn-focus-shadow-rgb: 17, 17, 17;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #111111;
+  --bs-btn-active-border-color: #111111;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #111111;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #111111;
   --bs-gradient: none;
 }
 
@@ -10082,6 +10141,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-darkgreen-text-emphasis);
 }
 
+.alert-darkgray {
+  --bs-alert-color: var(--bs-darkgray-text-emphasis);
+  --bs-alert-bg: var(--bs-darkgray-bg-subtle);
+  --bs-alert-border-color: var(--bs-darkgray-border-subtle);
+  --bs-alert-link-color: var(--bs-darkgray-text-emphasis);
+}
+
 .alert-sand {
   --bs-alert-color: var(--bs-sand-text-emphasis);
   --bs-alert-bg: var(--bs-sand-bg-subtle);
@@ -10512,6 +10578,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-darkgreen-bg-subtle);
   --bs-list-group-active-bg: var(--bs-darkgreen-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-darkgreen-text-emphasis);
+}
+
+.list-group-item-darkgray {
+  --bs-list-group-color: var(--bs-darkgray-text-emphasis);
+  --bs-list-group-bg: var(--bs-darkgray-bg-subtle);
+  --bs-list-group-border-color: var(--bs-darkgray-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-darkgray-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-darkgray-border-subtle);
+  --bs-list-group-active-color: var(--bs-darkgray-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-darkgray-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-darkgray-text-emphasis);
 }
 
 .list-group-item-sand {
@@ -12075,6 +12154,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-darkgreen-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-darkgray {
+  color: #fff !important;
+  background-color: RGBA(var(--bs-darkgray-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .text-bg-sand {
   color: #000 !important;
   background-color: RGBA(var(--bs-sand-rgb), var(--bs-bg-opacity, 1)) !important;
@@ -12164,6 +12248,15 @@ textarea.form-control-lg {
 .link-darkgreen:hover, .link-darkgreen:focus {
   color: RGBA(22, 73, 39, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(22, 73, 39, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-darkgray {
+  color: RGBA(var(--bs-darkgray-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-darkgray-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-darkgray:hover, .link-darkgray:focus {
+  color: RGBA(14, 14, 14, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(14, 14, 14, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-sand {
@@ -12619,6 +12712,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-darkgreen-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-darkgray {
+  --bs-focus-ring-color: rgba(var(--bs-darkgray-rgb), var(--bs-focus-ring-opacity));
+}
+
 .focus-ring-sand {
   --bs-focus-ring-color: rgba(var(--bs-sand-rgb), var(--bs-focus-ring-opacity));
 }
@@ -12790,6 +12887,11 @@ textarea.form-control-lg {
 .border-darkgreen {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-darkgreen-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-darkgray {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-darkgray-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-sand {
@@ -12966,26 +13068,6 @@ textarea.form-control-lg {
 
 .min-vh-100 {
   min-height: 100vh !important;
-}
-
-.min-vh-40 {
-  min-height: 40vh !important;
-}
-
-.min-vh-50 {
-  min-height: 50vh !important;
-}
-
-.min-vh-60 {
-  min-height: 60vh !important;
-}
-
-.min-vh-70 {
-  min-height: 70vh !important;
-}
-
-.min-vh-80 {
-  min-height: 80vh !important;
 }
 
 .flex-fill {
@@ -13718,6 +13800,10 @@ textarea.form-control-lg {
   text-align: center !important;
 }
 
+.text-justify {
+  text-align: justify !important;
+}
+
 .text-decoration-none {
   text-decoration: none !important;
 }
@@ -13800,6 +13886,11 @@ textarea.form-control-lg {
 .text-darkgreen {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-darkgreen-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-darkgray {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-darkgray-rgb), var(--bs-text-opacity)) !important;
 }
 
 .text-sand {
@@ -14019,6 +14110,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-darkgreen-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-darkgray {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-darkgray-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline-sand {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-sand-rgb), var(--bs-link-underline-opacity)) !important;
@@ -14125,6 +14221,11 @@ textarea.form-control-lg {
 .bg-darkgreen {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-darkgreen-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-darkgray {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-darkgray-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-sand {
@@ -15069,6 +15170,9 @@ textarea.form-control-lg {
   .text-sm-center {
     text-align: center !important;
   }
+  .text-sm-justify {
+    text-align: justify !important;
+  }
 }
 @media (min-width: 768px) {
   .float-md-start {
@@ -15651,6 +15755,9 @@ textarea.form-control-lg {
   }
   .text-md-center {
     text-align: center !important;
+  }
+  .text-md-justify {
+    text-align: justify !important;
   }
 }
 @media (min-width: 992px) {
@@ -16235,6 +16342,9 @@ textarea.form-control-lg {
   .text-lg-center {
     text-align: center !important;
   }
+  .text-lg-justify {
+    text-align: justify !important;
+  }
 }
 @media (min-width: 1200px) {
   .float-xl-start {
@@ -16818,6 +16928,9 @@ textarea.form-control-lg {
   .text-xl-center {
     text-align: center !important;
   }
+  .text-xl-justify {
+    text-align: justify !important;
+  }
 }
 @media (min-width: 1400px) {
   .float-xxl-start {
@@ -17400,6 +17513,9 @@ textarea.form-control-lg {
   }
   .text-xxl-center {
     text-align: center !important;
+  }
+  .text-xxl-justify {
+    text-align: justify !important;
   }
 }
 @media (min-width: 1200px) {
